// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generator fixtures > size 5 builds the recorded puzzle 1`] = `
{
  "code": "101MY6ZHH4G",
  "colors": [
    3,
    2,
    1,
    0,
    4,
  ],
  "givens": [],
  "regions": [
    1,
    1,
    1,
    0,
    0,
    2,
    3,
    1,
    1,
    3,
    2,
    3,
    3,
    3,
    3,
    4,
    4,
    4,
    3,
    3,
    4,
    4,
    4,
    4,
    4,
  ],
  "silver": false,
  "size": 5,
  "solution": [
    4,
    7,
    10,
    18,
    21,
  ],
  "tier": "easy",
}
`;

exports[`generator fixtures > size 6 builds the recorded puzzle 1`] = `
{
  "code": "15PWY6Z026F",
  "colors": [
    1,
    5,
    2,
    0,
    3,
    4,
  ],
  "givens": [
    1,
  ],
  "regions": [
    0,
    0,
    2,
    2,
    1,
    1,
    0,
    0,
    0,
    2,
    2,
    1,
    2,
    2,
    2,
    2,
    3,
    3,
    4,
    2,
    3,
    3,
    3,
    3,
    4,
    2,
    2,
    2,
    2,
    2,
    4,
    2,
    2,
    5,
    5,
    5,
  ],
  "silver": true,
  "size": 6,
  "solution": [
    1,
    11,
    14,
    22,
    24,
    33,
  ],
  "tier": "medium",
}
`;

exports[`generator fixtures > size 7 builds the recorded puzzle 1`] = `
{
  "code": "1AB4Y6YGK0W",
  "colors": [
    0,
    6,
    2,
    3,
    5,
    1,
    4,
  ],
  "givens": [],
  "regions": [
    6,
    0,
    0,
    0,
    0,
    4,
    4,
    6,
    3,
    0,
    1,
    1,
    4,
    2,
    6,
    3,
    0,
    4,
    4,
    4,
    2,
    6,
    3,
    0,
    0,
    4,
    4,
    2,
    6,
    3,
    3,
    3,
    4,
    4,
    4,
    6,
    5,
    5,
    5,
    5,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
    6,
  ],
  "silver": false,
  "size": 7,
  "solution": [
    2,
    11,
    20,
    22,
    33,
    38,
    42,
  ],
  "tier": "hard",
}
`;

exports[`generator fixtures > size 8 builds the recorded puzzle 1`] = `
{
  "code": "1CWCY6Y7C2D",
  "colors": [
    2,
    4,
    3,
    7,
    0,
    5,
    1,
    6,
  ],
  "givens": [],
  "regions": [
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    2,
    1,
    5,
    5,
    1,
    1,
    1,
    1,
    2,
    5,
    5,
    5,
    1,
    1,
    1,
    1,
    5,
    5,
    4,
    4,
    3,
    3,
    1,
    1,
    5,
    5,
    4,
    4,
    4,
    4,
    4,
    6,
    5,
    5,
    7,
    7,
    4,
    4,
    4,
    6,
    7,
    7,
    7,
    4,
    4,
    4,
    6,
    6,
    7,
    7,
    7,
    7,
    7,
    4,
    4,
    6,
  ],
  "silver": true,
  "size": 8,
  "solution": [
    7,
    12,
    16,
    29,
    35,
    41,
    54,
    58,
  ],
  "tier": "medium",
}
`;

exports[`generator fixtures > size 9 builds the recorded puzzle 1`] = `
{
  "code": "1H1MY6SQXWA",
  "colors": [
    7,
    5,
    6,
    3,
    4,
    1,
    0,
    8,
    2,
  ],
  "givens": [],
  "regions": [
    1,
    1,
    1,
    1,
    2,
    2,
    2,
    0,
    0,
    1,
    1,
    2,
    2,
    2,
    2,
    2,
    2,
    5,
    1,
    3,
    3,
    3,
    2,
    4,
    2,
    2,
    5,
    1,
    3,
    3,
    2,
    2,
    4,
    4,
    5,
    5,
    4,
    4,
    4,
    4,
    4,
    4,
    5,
    5,
    5,
    4,
    4,
    4,
    6,
    4,
    5,
    5,
    5,
    7,
    4,
    6,
    6,
    6,
    4,
    6,
    7,
    7,
    7,
    8,
    6,
    6,
    6,
    6,
    6,
    7,
    7,
    7,
    8,
    6,
    6,
    6,
    6,
    6,
    6,
    7,
    7,
  ],
  "silver": false,
  "size": 9,
  "solution": [
    8,
    10,
    22,
    29,
    41,
    52,
    57,
    69,
    72,
  ],
  "tier": "medium",
}
`;

exports[`generator fixtures > size 10 builds the recorded puzzle 1`] = `
{
  "code": "1PPWY6S6EY9",
  "colors": [
    8,
    9,
    1,
    4,
    2,
    5,
    6,
    7,
    0,
    3,
  ],
  "givens": [],
  "regions": [
    0,
    0,
    0,
    0,
    0,
    3,
    3,
    3,
    3,
    1,
    2,
    2,
    2,
    0,
    5,
    3,
    3,
    1,
    1,
    1,
    2,
    0,
    0,
    0,
    5,
    3,
    3,
    4,
    4,
    4,
    2,
    0,
    0,
    0,
    5,
    3,
    3,
    4,
    4,
    4,
    2,
    0,
    0,
    0,
    5,
    3,
    3,
    3,
    4,
    4,
    2,
    2,
    2,
    2,
    5,
    5,
    3,
    3,
    3,
    4,
    6,
    6,
    6,
    6,
    6,
    5,
    3,
    4,
    4,
    4,
    6,
    7,
    9,
    9,
    6,
    5,
    3,
    4,
    4,
    4,
    7,
    7,
    9,
    6,
    6,
    5,
    5,
    4,
    4,
    8,
    7,
    7,
    9,
    9,
    6,
    5,
    8,
    8,
    8,
    8,
  ],
  "silver": true,
  "size": 10,
  "solution": [
    4,
    17,
    20,
    36,
    48,
    55,
    63,
    71,
    89,
    92,
  ],
  "tier": "hard",
}
`;
